--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -204,7 +204,7 @@
     <DCCReference Include="i_MarkCategoryFactoryConfig.pas" />
     <DCCReference Include="i_MarkCategoryFactoryDbInternal.pas" />
     <DCCReference Include="i_MarkFactory.pas" />
-    <DCCReference Include="i_MarkFactoryDbInternal.pas" />
+    <DCCReference Include="i_MarkFactorySmlInternal.pas" />
     <DCCReference Include="i_MarkNameGenerator.pas" />
     <DCCReference Include="i_MarkPicture.pas" />
     <DCCReference Include="i_MarkPolygonLayerConfig.pas" />
