--- a/ggexclude.cfg
+++ b/ggexclude.cfg
@@ -49,3 +49,4 @@ TImage32.Bitmap.ResamplerClassName
 TCustomBitmap32.ResamplerClassName
 TBitmap32.ResamplerClassName
 TEdit.PasswordChar
+TfrmInvisibleBrowser.Font.Name
