--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -220,6 +220,7 @@
     <DCCReference Include="i_PolyLineLayerConfig.pas" />
     <DCCReference Include="i_PosChangeMessage.pas" />
     <DCCReference Include="i_ProxySettings.pas" />
+    <DCCReference Include="i_RequestBuilderScript.pas" />
     <DCCReference Include="i_SatellitesInViewMapDraw.pas" />
     <DCCReference Include="i_ScaleLineConfig.pas" />
     <DCCReference Include="i_SearchResultPresenter.pas" />
@@ -564,6 +565,9 @@
     <DCCReference Include="u_PosChangeMessage.pas" />
     <DCCReference Include="u_PosFromGSM.pas" />
     <DCCReference Include="u_ProxyConfig.pas" />
+    <DCCReference Include="u_RequestBuilderPascalScript.pas" />
+    <DCCReference Include="u_RequestBuilderPascalScriptHelpers.pas" />
+    <DCCReference Include="u_RequestBuilderScript.pas" />
     <DCCReference Include="u_ResStrings.pas" />
     <DCCReference Include="u_SatellitesInViewMapDrawSimple.pas" />
     <DCCReference Include="u_SaveLoadTBConfigByConfigProvider.pas" />
@@ -610,8 +614,6 @@
     <DCCReference Include="u_TileStorageTypeListItem.pas" />
     <DCCReference Include="u_TileStorageTypeListSimple.pas" />
     <DCCReference Include="u_TimeZones.pas" />
-    <DCCReference Include="u_UrlGenerator.pas" />
-    <DCCReference Include="u_UrlGeneratorHelpers.pas" />
     <DCCReference Include="u_UsedMarksConfig.pas" />
     <DCCReference Include="u_UsedMarksConfigStatic.pas" />
     <DCCReference Include="u_ValueToStringConverter.pas" />
