--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -588,6 +588,7 @@
     <DCCReference Include="u_StatBarConfig.pas" />
     <DCCReference Include="u_TBXSubmenuItemWithIndicator.pas" />
     <DCCReference Include="u_TileCacheSimpleGlobal.pas" />
+    <DCCReference Include="u_TileDownloader.pas" />
     <DCCReference Include="u_TileDownloaderBaseCore.pas" />
     <DCCReference Include="u_TileDownloaderBaseThread.pas" />
     <DCCReference Include="u_TileDownloaderEventElement.pas" />
