Не знаю откуда взялась эта строчка, но мне очень мешала

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -364,9 +364,7 @@
     <DCCReference Include="src\i_JclNotify.pas" />
     <DCCReference Include="src\KAZip.pas" />
     <DCCReference Include="src\Langs.pas" />
-    <DCCReference Include="src\MD5.pas">
-      <Form>$R *.res</Form>
-    </DCCReference>
+    <DCCReference Include="src\MD5.pas" />
     <DCCReference Include="src\RegExpr.pas" />
     <DCCReference Include="src\SwinHttp.pas" />
     <DCCReference Include="src\TarWriter.pas" />
