--- a/SASPlanet.cfg
+++ b/SASPlanet.cfg
@@ -1,6 +1,6 @@
 -$A8
 -$B-
--$C-
+-$C+
 -$D+
 -$E-
 -$F-
@@ -31,8 +31,8 @@
 -M
 -$M16384,1048576
 -K$00400000
--E".\.bin"
--N".\.dcu"
+-E".bin"
+-N".dcu"
 -LE"c:\program files\borland\delphi7\Projects\Bpl"
 -LN"c:\program files\borland\delphi7\Projects\Bpl"
 -w-UNSAFE_TYPE
