--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -355,6 +355,7 @@
     <DCCReference Include="src\CPDrv.pas" />
     <DCCReference Include="src\cUnicode.pas" />
     <DCCReference Include="src\cUnicodeChar.pas" />
+    <DCCReference Include="src\cUnicodeCodecs.pas" />
     <DCCReference Include="src\c_ZeroGUID.pas" />
     <DCCReference Include="src\ECWReader.pas" />
     <DCCReference Include="src\ECWwriter.pas" />
