--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -465,6 +465,7 @@
     <DCCReference Include="u_GPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="u_GPSModuleByZylGPS.pas" />
     <DCCReference Include="u_GPSModuleFactoryByZylGPS.pas" />
+    <DCCReference Include="u_GPSPositionFactory.pas" />
     <DCCReference Include="u_GPSPositionStatic.pas" />
     <DCCReference Include="u_GPSRecorderStuped.pas" />
     <DCCReference Include="u_GPSSatelliteInfo.pas" />
