--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -215,6 +215,7 @@
     <DCCReference Include="i_MarkTemplate.pas" />
     <DCCReference Include="i_MemCache.pas" />
     <DCCReference Include="i_MemObjCache.pas" />
+    <DCCReference Include="i_MessageHandler.pas" />
     <DCCReference Include="i_MiniMapLayerConfig.pas" />
     <DCCReference Include="i_NavigationToPoint.pas" />
     <DCCReference Include="i_ObjectWithTTL.pas" />
@@ -500,6 +501,7 @@
     <DCCReference Include="u_InternalPerformanceCounterList.pas" />
     <DCCReference Include="u_JclListenerNotifierLinksList.pas" />
     <DCCReference Include="u_KeyMovingConfig.pas" />
+    <DCCReference Include="u_KeyMovingHandler.pas" />
     <DCCReference Include="u_KmlInfoSimple.pas" />
     <DCCReference Include="u_KmlInfoSimpleParser.pas" />
     <DCCReference Include="u_KmlLayerConfig.pas" />
