--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -196,6 +196,7 @@
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
     <DCCReference Include="i_MapViewGoto.pas" />
+    <DCCReference Include="i_MapZoomingConfig.pas" />
     <DCCReference Include="i_MarkCategory.pas" />
     <DCCReference Include="i_MarkCategoryDB.pas" />
     <DCCReference Include="i_MarkCategoryDBSmlInternal.pas" />
@@ -548,6 +549,7 @@
     <DCCReference Include="u_MapTypesMainList.pas" />
     <DCCReference Include="u_MapViewGotoOnFMain.pas" />
     <DCCReference Include="u_MapViewPortStateNew.pas" />
+    <DCCReference Include="u_MapZoomingConfig.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
     <DCCReference Include="u_MarkCategoryDB.pas" />
     <DCCReference Include="u_MarkCategoryFactory.pas" />
