--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -169,6 +169,7 @@
     <DCCReference Include="i_ImageResamplerFactory.pas" />
     <DCCReference Include="i_ImportConfig.pas" />
     <DCCReference Include="i_ImportFile.pas" />
+    <DCCReference Include="i_InetConfig.pas" />
     <DCCReference Include="i_InternalPerformanceCounter.pas" />
     <DCCReference Include="i_JclListenerNotifierLinksList.pas" />
     <DCCReference Include="i_KeyMovingConfig.pas" />
@@ -499,6 +500,7 @@
     <DCCReference Include="u_ImportKML.pas" />
     <DCCReference Include="u_ImportPLT.pas" />
     <DCCReference Include="u_InetConfig.pas" />
+    <DCCReference Include="u_InetConfigStatic.pas" />
     <DCCReference Include="u_InterfacedThread.pas" />
     <DCCReference Include="u_InternalPerformanceCounter.pas" />
     <DCCReference Include="u_InternalPerformanceCounterList.pas" />
