--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -198,6 +198,7 @@
     <DCCReference Include="i_MapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
+    <DCCReference Include="i_MapVersionConfig.pas" />
     <DCCReference Include="i_MapViewGoto.pas" />
     <DCCReference Include="i_MapZoomingConfig.pas" />
     <DCCReference Include="i_MarkCategory.pas" />
@@ -559,6 +560,7 @@
     <DCCReference Include="u_MapTypeList.pas" />
     <DCCReference Include="u_MapTypeMenuItemsGeneratorBasic.pas" />
     <DCCReference Include="u_MapTypesMainList.pas" />
+    <DCCReference Include="u_MapVersionConfig.pas" />
     <DCCReference Include="u_MapViewGotoOnFMain.pas" />
     <DCCReference Include="u_MapViewPortStateNew.pas" />
     <DCCReference Include="u_MapZoomingConfig.pas" />
