--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -199,6 +199,7 @@
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
     <DCCReference Include="i_MapVersionConfig.pas" />
+    <DCCReference Include="i_MapVersionInfo.pas" />
     <DCCReference Include="i_MapViewGoto.pas" />
     <DCCReference Include="i_MapZoomingConfig.pas" />
     <DCCReference Include="i_MarkCategory.pas" />
@@ -561,6 +562,7 @@
     <DCCReference Include="u_MapTypeMenuItemsGeneratorBasic.pas" />
     <DCCReference Include="u_MapTypesMainList.pas" />
     <DCCReference Include="u_MapVersionConfig.pas" />
+    <DCCReference Include="u_MapVersionInfo.pas" />
     <DCCReference Include="u_MapViewGotoOnFMain.pas" />
     <DCCReference Include="u_MapViewPortStateNew.pas" />
     <DCCReference Include="u_MapZoomingConfig.pas" />
