--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -230,6 +230,7 @@
     <DCCReference Include="i_NavigationToPoint.pas" />
     <DCCReference Include="i_ObjectWithTTL.pas" />
     <DCCReference Include="i_PathDetalizeProvider.pas" />
+    <DCCReference Include="i_PathDetalizeProviderList.pas" />
     <DCCReference Include="i_PolygonLayerConfig.pas" />
     <DCCReference Include="i_PolyLineLayerConfig.pas" />
     <DCCReference Include="i_PoolElement.pas" />
@@ -609,6 +610,9 @@
     <DCCReference Include="u_NotifyEventPosChangeListener.pas" />
     <DCCReference Include="u_NotifyWithGUIDEvent.pas" />
     <DCCReference Include="u_PathDetalizeProviderCloudMade.pas" />
+    <DCCReference Include="u_PathDetalizeProviderListBase.pas" />
+    <DCCReference Include="u_PathDetalizeProviderListEntity.pas" />
+    <DCCReference Include="u_PathDetalizeProviderListSimple.pas" />
     <DCCReference Include="u_PathDetalizeProviderMailRu.pas" />
     <DCCReference Include="u_PathDetalizeProviderYourNavigation.pas" />
     <DCCReference Include="u_PLT.pas" />
