--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -242,7 +242,7 @@
     <DCCReference Include="i_SelectionPolygonLayerConfig.pas" />
     <DCCReference Include="i_SelectionRectLayerConfig.pas" />
     <DCCReference Include="i_Sensor.pas" />
-    <DCCReference Include="i_SensorListGenerator.pas" />
+    <DCCReference Include="i_SensorList.pas" />
     <DCCReference Include="i_SensorViewListGenerator.pas" />
     <DCCReference Include="i_SimpleDownloader.pas" />
     <DCCReference Include="i_SimpleFactory.pas" />
@@ -633,7 +633,8 @@
     <DCCReference Include="u_SelectionRectLayerConfig.pas" />
     <DCCReference Include="u_SensorBase.pas" />
     <DCCReference Include="u_SensorBatteryStatus.pas" />
-    <DCCReference Include="u_SensorListGeneratorStuped.pas" />
+    <DCCReference Include="u_SensorListBase.pas" />
+    <DCCReference Include="u_SensorListStuped.pas" />
     <DCCReference Include="u_SensorsFromGPSRecorder.pas" />
     <DCCReference Include="u_SensorTextFromGPSRecorder.pas" />
     <DCCReference Include="u_SensorTextFromNavToPoint.pas" />
