Сильно переделал механизм отмены операций

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -229,6 +229,7 @@
     <DCCReference Include="i_MiniMapLayerConfig.pas" />
     <DCCReference Include="i_NavigationToPoint.pas" />
     <DCCReference Include="i_ObjectWithTTL.pas" />
+    <DCCReference Include="i_OperationCancelNotifier.pas" />
     <DCCReference Include="i_PathDetalizeProvider.pas" />
     <DCCReference Include="i_PathDetalizeProviderList.pas" />
     <DCCReference Include="i_PolygonLayerConfig.pas" />
@@ -609,6 +610,7 @@
     <DCCReference Include="u_NotifyEventListener.pas" />
     <DCCReference Include="u_NotifyEventPosChangeListener.pas" />
     <DCCReference Include="u_NotifyWithGUIDEvent.pas" />
+    <DCCReference Include="u_OperationCancelNotifier.pas" />
     <DCCReference Include="u_PathDetalizeProviderCloudMade.pas" />
     <DCCReference Include="u_PathDetalizeProviderListBase.pas" />
     <DCCReference Include="u_PathDetalizeProviderListEntity.pas" />
