--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -576,7 +576,7 @@
     <DCCReference Include="u_MapVersionConfig.pas" />
     <DCCReference Include="u_MapVersionInfo.pas" />
     <DCCReference Include="u_MapViewGotoOnFMain.pas" />
-    <DCCReference Include="u_MapViewPortStateNew.pas" />
+    <DCCReference Include="u_MapViewPortState.pas" />
     <DCCReference Include="u_MapZoomingConfig.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
     <DCCReference Include="u_MarkCategoryDB.pas" />
