--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -519,6 +519,7 @@
     <DCCReference Include="u_ImportConfig.pas" />
     <DCCReference Include="u_ImportHLG.pas" />
     <DCCReference Include="u_ImportKML.pas" />
+    <DCCReference Include="u_ImportMpSimple.pas" />
     <DCCReference Include="u_ImportPLT.pas" />
     <DCCReference Include="u_InetConfig.pas" />
     <DCCReference Include="u_InetConfigStatic.pas" />
