--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -168,6 +168,7 @@
     <DCCReference Include="i_GeoCoder.pas" />
     <DCCReference Include="i_GeoCoderList.pas" />
     <DCCReference Include="i_GlobalAppConfig.pas" />
+    <DCCReference Include="i_GlobalDownloadConfig.pas" />
     <DCCReference Include="i_GlobalViewMainConfig.pas" />
     <DCCReference Include="i_GotoLayerConfig.pas" />
     <DCCReference Include="i_GPS.pas" />
@@ -471,6 +472,7 @@
     <DCCReference Include="u_GeoToStr.pas" />
     <DCCReference Include="u_GlobalAppConfig.pas" />
     <DCCReference Include="u_GlobalCahceConfig.pas" />
+    <DCCReference Include="u_GlobalDownloadConfig.pas" />
     <DCCReference Include="u_GlobalState.pas" />
     <DCCReference Include="u_GlobalViewMainConfig.pas" />
     <DCCReference Include="u_GotoLayerConfig.pas" />
