--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -414,7 +414,9 @@
     <DCCReference Include="u_ConfigDataProviderByIniFile.pas" />
     <DCCReference Include="u_ConfigDataProviderByIniFileSection.pas" />
     <DCCReference Include="u_ConfigDataProviderByKaZip.pas" />
+    <DCCReference Include="u_ConfigDataProviderByResources.pas" />
     <DCCReference Include="u_ConfigDataProviderVirtualWithSubItem.pas" />
+    <DCCReference Include="u_ConfigDataProviderWithGlobal.pas" />
     <DCCReference Include="u_ConfigDataProviderWithLocal.pas" />
     <DCCReference Include="u_ConfigDataProviderWithReplacedSubItem.pas" />
     <DCCReference Include="u_ConfigDataProviderWithUseDepreciated.pas" />
