--- a/Tools/dxgettext/ggexclude.cfg
+++ b/Tools/dxgettext/ggexclude.cfg
@@ -4,6 +4,8 @@ Includes
 [exclude-file]
 frm_DebugInfo.dfm
 Resources/Version/Version.rc
+Resources/MainIcon/MainIcon.rc
+Resources/Common/Common.rc
 
 [exclude-form-class]
 TFont
