--- a/Tools/dxgettext/ggexclude.cfg
+++ b/Tools/dxgettext/ggexclude.cfg
@@ -1,11 +1,9 @@
 [exclude-dir]
 Includes
+Resources
 
 [exclude-file]
 frm_DebugInfo.dfm
-Resources/Version/Version.rc
-Resources/MainIcon/MainIcon.rc
-Resources/Common/Common.rc
 
 [exclude-form-class]
 TFont
